simplified molecular alignment code and changed URL creation