@@ -341,10 +341,15 @@ public class Mol_TextCifWriterOld {
              */
             CifFile cifFile;
             if (parseBinary) {
-                cifFile = CifIO.readFromURL(new URL("https://models.rcsb.org/" + pdbId + ".bcif"));
+                Path p = Paths.get("https://models.rcsb.org/" + pdbId + ".bcif");
+                cifFile = CifIO.readFromURL(p.toUri().toURL());
+                //https://stackoverflow.com/questions/75966165/how-to-replace-the-deprecated-url-constructors-in-java-20
+                //cifFile = CifIO.readFromURL(new URL("https://models.rcsb.org/" + pdbId + ".bcif"));
             } else {
                 // parse CIF from RCSB PDB
-                cifFile = CifIO.readFromURL(new URL("https://files.rcsb.org/download/" + pdbId + ".cif"));
+                Path p = Paths.get("https://files.rcsb.org/download/" + pdbId + ".cif");
+                cifFile = CifIO.readFromURL(p.toUri().toURL());
+                //cifFile = CifIO.readFromURL(new URL("https://files.rcsb.org/download/" + pdbId + ".cif"));
             }
             // fine-grained options are available in the CifOptions class
 
